--- a/404pagechallenge/index.html
+++ b/404pagechallenge/index.html
@@ -21,7 +21,7 @@
     </header>
 
     <div class="container">
-        <img src="Scarecrow.png" alt="Espantalho">
+        <img src="./img/Scarecrow.png" alt="Espantalho">
         <div class="infos">
             <h1>Eu tenho más notícias para você</h1>
 
